# ContinuousIntegration4Project

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  main.c  main.cpp
.circleci/: config.yml
